--- a/RESTService/WebContent/WEB-INF/web.xml
+++ b/RESTService/WebContent/WEB-INF/web.xml
@@ -20,13 +20,13 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>org.vincenzo.logic</param-value>
+			<param-value>org.vinrest.logic</param-value>
 		</init-param>
 	</servlet>
 
 	<servlet>
 		<servlet-name>init</servlet-name>
-		<servlet-class>org.vincenzo.servlet.MainServlet</servlet-class>
+		<servlet-class>org.vinrest.servlet.MainServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
